{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 14,
  "lineage": "fa6ce9f1-5370-e4dc-2750-556541221612",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:internet-gateway/igw-09d13f33e8b24aee5",
            "id": "igw-09d13f33e8b24aee5",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc-igw"
            },
            "tags_all": {
              "Name": "ecs_vpc-igw"
            },
            "vpc_id": "vpc-0cd893cae4f670bdc"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:route-table/rtb-0d71f3d498a4b2613",
            "id": "rtb-0d71f3d498a4b2613",
            "owner_id": "378471046835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d13f33e8b24aee5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_vpc-route-table"
            },
            "tags_all": {
              "Name": "ecs_vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd893cae4f670bdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0083272ad87057e49",
            "route_table_id": "rtb-0d71f3d498a4b2613",
            "subnet_id": "subnet-05822458a3c825d98"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a45e62756a120695",
            "route_table_id": "rtb-0d71f3d498a4b2613",
            "subnet_id": "subnet-035caea1385878b3c"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:security-group/sg-06a9f78e7cbcee6c6",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9f78e7cbcee6c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_poc_sg",
            "name_prefix": "",
            "owner_id": "378471046835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_poc_sg"
            },
            "tags_all": {
              "Name": "ecs_poc_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd893cae4f670bdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-05822458a3c825d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05822458a3c825d98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-0"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-0"
            },
            "vpc_id": "vpc-0cd893cae4f670bdc"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-035caea1385878b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035caea1385878b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-1"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-1"
            },
            "vpc_id": "vpc-0cd893cae4f670bdc"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:vpc/vpc-0cd893cae4f670bdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074ee8fcd05fd69ba",
            "default_route_table_id": "rtb-03850e1120c2042e2",
            "default_security_group_id": "sg-0fcbae6ee75ee73c8",
            "dhcp_options_id": "dopt-0aea9e766ef934738",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd893cae4f670bdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03850e1120c2042e2",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc"
            },
            "tags_all": {
              "Name": "ecs_vpc"
            }
          }
        }
      ]
    }
  ]
}